--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer-container {
     padding: 20px;
     left:0;
-    bottom:0;
+    bottom:100%;
     right:0;
     text-align: center;
     align-content: center;
