Working on connection to database
Signed-off-by: rishichalla67 <rishichalla67@gmail.com>

--- a/client/src/views/Shop/Shop.css
+++ b/client/src/views/Shop/Shop.css
@@ -3,6 +3,12 @@
     padding-top: 300px;
 }
 
+.home{
+    display: flex;
+
+}
+
+
 .homeButton {
     display: inline-block;
     border-radius: 4px;
