--- a/client/src/components/Navigation/Navigation.css
+++ b/client/src/components/Navigation/Navigation.css
@@ -1,4 +1,5 @@
 .nav-container {
-    position: absolute;
-    background: transparent;
+    display: flex;
+    background: black;
+    color: black;
 }
