--- a/client/src/components/ShopPreview/ShopPreview.css
+++ b/client/src/components/ShopPreview/ShopPreview.css
@@ -1,10 +1,54 @@
 .shop-container {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
 }
 
 .car {
     height: 250px;
     width: 500px;
 
+}
+
+.size{
+    height: 45px;
+    width: 45px
+}
+
+.blue {
+
+    height: 45px;
+    width: 45px
+}
+
+.green {
+    background-color: green;
+    height: 45px;
+    width: 45px
+}
+
+.resize {
+    position: relative;
+    top: 35px;
+    width: 62%;
+    height: 75%;
+}
+
+
+.resize1 {
+    position: relative;
+    top: 35px;
+    width: 62%;
+    height: 75%;
+
+}
+
+.color {
+    background: aquamarine;
+    padding: 10px 15px;
+}
+
+.format{
+    background-color: aquamarine;
+    color: black;
+    font-size: large;
 }
