--- a/client/src/components/Cart/Cart.css
+++ b/client/src/components/Cart/Cart.css
@@ -1,11 +1,12 @@
-.cart-container{
-    padding-bottom:  0 rem;
-    padding-top: 0 rem;
-    vertical-align: right;
-    float: right;
-	width: 30%;
-    padding: 100 px;
-    background-color: #000000 ;
+
+
+.breadcrumb {
+	background-color: lightgrey;
+}
+
+.navBar {
+	padding-left: -20px;
+	padding-right: -20px;
 }
 
 table tbody td .form-control{
