PAYPAL IS BACK BABY

--- a/client/src/components/Cart/Cart.css
+++ b/client/src/components/Cart/Cart.css
@@ -3,6 +3,19 @@
 	color: black;
 	font-size: large;
 }
+
+input[type=text] {
+	height: 20%;
+	width: 30%;
+	padding: 12px 20px;
+	font-size: 16px;
+	margin: 4px 2px;
+	box-sizing: border-box;
+	border: none;
+	background-color: aquamarine;
+	color: black;
+
+}
 input[type=tel] {
 	width: 30%;
 	padding: 12px 20px;
@@ -105,8 +118,8 @@ table body td:before {
 
 
 
-table foot td{display:block; }
-table foot td .btn{display:block;}
+/*table foot td{display:block; }*/
+/*table foot td .btn{display:block;}*/
 
 
 table>tbody>tr>td, .table>tfoot>tr>td{
